syntax = "proto3";

package org_glowroot_agent_embedded_repo_proto;

option java_package = "org.glowroot.agent.embedded.repo.proto";

option java_outer_classname = "Stored";

message QueriesByDest {
  // e.g. "PostgreSQL", "MySQL", "Cassandra", "MongoDB" (unknown jdbc dest is "SQL")
  // with optional second component e.g. "host:port", separated from first component by "|"
  string dest = 1;
  repeated Query query = 2;
}

message Query {
  string truncated_text = 1;
  string full_text_sha1 = 2;
  double total_duration_nanos = 3;
  int64 execution_count = 4;
  OptionalInt64 total_rows = 5;
}

message ServiceCallsByDest {
  // e.g. "HTTP", "HTTPS", "Kafka"
  // with optional second component e.g. "host:port", separated from first component by "|"
  string dest = 1;
  repeated ServiceCall service_call = 2;
}

message ServiceCall {
  string text = 1;
  double total_duration_nanos = 2;
  int64 execution_count = 3;
}

message OptionalInt64 {
  int64 value = 1;
}
