syntax = "proto3";

import "Profile.proto";
import "Common.proto";

package org_glowroot_wire_api_model;

option java_package = "org.glowroot.wire.api.model";

// deprecated in 0.9.5
message OldAggregatesByType {
  string transaction_type = 1;
  Aggregate overall_aggregate = 2;
  repeated OldTransactionAggregate transaction_aggregate = 3;
}

// deprecated in 0.9.5
message OldTransactionAggregate {
  string transaction_name = 2;
  Aggregate aggregate = 3;
}

// aggregate uses double instead of int64 to avoid (unlikely) 292 year nanosecond rollover
message Aggregate {

  double total_duration_nanos = 1;
  int64 transaction_count = 2;
  int64 error_count = 3;
  bool async_transactions = 4; // true if there was at least one async transaction in aggregate
  repeated Timer main_thread_root_timer = 5;
  Timer aux_thread_root_timer = 6; // aux thread root timer is always "auxiliary thread"
  repeated Timer async_timer = 7; // async timers have no child timers
  OldThreadStats old_main_thread_stats = 8; // deprecated in 0.10.9
  OldThreadStats old_aux_thread_stats = 9; // deprecated in 0.10.9
  ThreadStats main_thread_stats = 17;
  ThreadStats aux_thread_stats = 18;
  Histogram duration_nanos_histogram = 10; // histogram values are in nanoseconds with microsecond
                                           // precision
  repeated OldQueriesByType old_queries_by_type = 11; // deprecated in 0.10.6
  repeated OldServiceCallsByType old_service_calls_by_type = 12; // deprecated in 0.10.6
  repeated Query query = 15;
  repeated ServiceCall service_call = 16;
  Profile main_thread_profile = 13;
  Profile aux_thread_profile = 14;

  message Histogram {
    // for smaller numbers of transactions, the individual raw values are stored directly
    // these values are ordered for fast percentile calculation on retrieval
    repeated int64 ordered_raw_value = 1;
    // for larger numbers of transactions, the histogram is tracked and encoded using HdrHistogram
    bytes encoded_bytes = 2;
  }

  message Timer {
    // name is null for synthetic root
    string name = 1;
    bool extended = 2;
    double total_nanos = 3;
    int64 count = 4;
    repeated Timer child_timer = 5;
  }

  // deprecated in 0.10.9
  message OldThreadStats {
    OptionalDouble total_cpu_nanos = 1;
    OptionalDouble total_blocked_nanos = 2;
    OptionalDouble total_waited_nanos = 3;
    OptionalDouble total_allocated_bytes = 4;
  }

  message ThreadStats {
    double total_cpu_nanos = 1; // -1 means N/A
    double total_blocked_nanos = 2; // -1 means N/A
    double total_waited_nanos = 3; // -1 means N/A
    double total_allocated_bytes = 4; // -1 means N/A
  }

  // deprecated in 0.10.6
  message OldQueriesByType {
    // e.g. "SQL", "CQL"
    string type = 1;
    repeated OldQuery query = 2;
  }

  // deprecated in 0.10.6
  message OldQuery {
    int32 shared_query_text_index = 5; // introduced in 0.9.1, replacing full_text attribute
    double total_duration_nanos = 2;
    int64 execution_count = 3;
    OptionalInt64 total_rows = 4;
  }

  message Query {
    // e.g. "SQL", "CQL"
    string type = 1;
    int32 shared_query_text_index = 2;
    double total_duration_nanos = 3;
    int64 execution_count = 4;
    OptionalInt64 total_rows = 5;
    bool active = 6; // only used for trace specific queries
  }

  // deprecated in 0.10.6
  message OldServiceCallsByType {
    // e.g. "HTTP"
    string type = 1;
    repeated OldServiceCall service_call = 2;
  }

  // deprecated in 0.10.6
  message OldServiceCall {
    string text = 1;
    double total_duration_nanos = 2;
    int64 execution_count = 3;
  }

  message ServiceCall {
    // e.g. "HTTP"
    string type = 1;
    string text = 2;
    double total_duration_nanos = 3;
    int64 execution_count = 4;
  }

  message SharedQueryText {
    string full_text = 1; // sent when query text <= 120 characters
    string truncated_text = 2; // sent when query text > 120 characters
    string full_text_sha1 = 3; // sent when query text > 120 characters
  }
}
